--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,12 +10,12 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
   <script type="text/javascript" src="src/MessageBuilder.js"></script>
+  <script type="text/javascript" src="src/EventFilter.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/MessageBuilderSpec.js"></script>
+  <script type="text/javascript" src="spec/EventFilterSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
