--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="src/MessageBuilder.js"></script>
   <script type="text/javascript" src="src/EventFilter.js"></script>
+  <script type="text/javascript" src="src/EventSender.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/MessageBuilderSpec.js"></script>
   <script type="text/javascript" src="spec/EventFilterSpec.js"></script>
+  <script type="text/javascript" src="spec/EventSenderSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
