Updates to support node as well. Moves examples to examples/ directory and includes a node example

--- a/examples/webExample.html
+++ b/examples/webExample.html
@@ -9,13 +9,13 @@ Authors:
 -->
   <head>
     <!-- Required includes for Js Lemma -->
-  <script type="text/javascript" src='lib/jquery.min.js'></script>
-  <script type="text/javascript" src="src/EventFilter.js"></script>
-  <script type="text/javascript" src="src/EventSender.js"></script>
-  <script type="text/javascript" src="src/MessageBuilder.js"></script>
-  <script type="text/javascript" src="src/MessageHandler.js"></script>
-  <script type="text/javascript" src="src/TcpReader.js"></script>
-  <script type="text/javascript" src="src/Lemma.js"></script>
+  <script type="text/javascript" src='../lib/jquery.min.js'></script>
+  <script type="text/javascript" src="../src/EventFilter.js"></script>
+  <script type="text/javascript" src="../src/EventSender.js"></script>
+  <script type="text/javascript" src="../src/MessageBuilder.js"></script>
+  <script type="text/javascript" src="../src/MessageHandler.js"></script>
+  <script type="text/javascript" src="../src/TcpReader.js"></script>
+  <script type="text/javascript" src="../src/Lemma.js"></script>
 
     <script>
       $(document).ready(function(){
