--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,16 +10,18 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/MessageBuilder.js"></script>
   <script type="text/javascript" src="src/EventFilter.js"></script>
   <script type="text/javascript" src="src/EventSender.js"></script>
+  <script type="text/javascript" src="src/MessageBuilder.js"></script>
   <script type="text/javascript" src="src/MessageHandler.js"></script>
+  <script type="text/javascript" src="src/MessageParser.js"></script>
   <script type="text/javascript" src="src/TcpReader.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/MessageBuilderSpec.js"></script>
+  <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/EventFilterSpec.js"></script>
   <script type="text/javascript" src="spec/EventSenderSpec.js"></script>
+  <script type="text/javascript" src="spec/MessageBuilderSpec.js"></script>
   <script type="text/javascript" src="spec/MessageHandlerSpec.js"></script>
   <script type="text/javascript" src="spec/TcpReaderSpec.js"></script>
 
