--- a/examples/webExample.html
+++ b/examples/webExample.html
@@ -14,6 +14,7 @@ Authors:
   <script type="text/javascript" src="../src/EventSender.js"></script>
   <script type="text/javascript" src="../src/MessageBuilder.js"></script>
   <script type="text/javascript" src="../src/MessageHandler.js"></script>
+  <script type="text/javascript" src="../src/MessageParser.js"></script>
   <script type="text/javascript" src="../src/TcpReader.js"></script>
   <script type="text/javascript" src="../src/Lemma.js"></script>
 
