added copyright line

--- a/examples/webExample.html
+++ b/examples/webExample.html
@@ -1,3 +1,5 @@
+<!-- Copyright (c) 2014, IDEO  -->
+
 <html>
 <!--
 This is a simple example site that demonstrates the Noam Js Lemma using websockets.
