Updated copyright notice Added bower & updated NPM package for distribution Removed Ruby build dependencices in lieu of grunt Added spec runner for concatenated files Removed "lib" directory

--- a/SpecRunner_dist.html
+++ b/SpecRunner_dist.html
@@ -10,12 +10,7 @@
   <script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/EventFilter.js"></script>
-  <script type="text/javascript" src="src/EventSender.js"></script>
-  <script type="text/javascript" src="src/MessageBuilder.js"></script>
-  <script type="text/javascript" src="src/MessageHandler.js"></script>
-  <script type="text/javascript" src="src/MessageParser.js"></script>
-  <script type="text/javascript" src="src/TcpReader.js"></script>
+  <script type="text/javascript" src="dist/lemma.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
