--- a/examples/webExample.html
+++ b/examples/webExample.html
@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2014, IDEO  -->
+<!-- Copyright (c) 2015, IDEO  -->
 
 <html>
 <!--
@@ -11,14 +11,8 @@ Authors:
 -->
   <head>
     <!-- Required includes for Js Lemma -->
-  <script type="text/javascript" src='../lib/jquery.min.js'></script>
-  <script type="text/javascript" src="../src/EventFilter.js"></script>
-  <script type="text/javascript" src="../src/EventSender.js"></script>
-  <script type="text/javascript" src="../src/MessageBuilder.js"></script>
-  <script type="text/javascript" src="../src/MessageHandler.js"></script>
-  <script type="text/javascript" src="../src/MessageParser.js"></script>
-  <script type="text/javascript" src="../src/TcpReader.js"></script>
-  <script type="text/javascript" src="../src/Lemma.js"></script>
+  <script type="text/javascript" src='../bower_components/jquery/dist/jquery.min.js'></script>
+  <script type="text/javascript" src="../dist/lemma.js"></script>
 
     <script>
       $(document).ready(function(){
