--- a/SpecRunner_dist.html
+++ b/SpecRunner_dist.html
@@ -22,6 +22,7 @@
 
   <script type="text/javascript">
     (function() {
+      'use strict';
       var jasmineEnv = jasmine.getEnv();
       jasmineEnv.updateInterval = 1000;
 
@@ -39,6 +40,7 @@
         if (currentWindowOnload) {
           currentWindowOnload();
         }
+
         execJasmine();
       };
 
@@ -47,7 +49,8 @@
       }
 
     })();
-  </script>
+
+</script>
 
 </head>
 
